--- a/theme/html/stylesheets/base.css
+++ b/theme/html/stylesheets/base.css
@@ -1,11 +1,10 @@
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
   padding-bottom: 20px;
 }
 
 .footer {
-  padding-top: 25px;
+  padding: 25px;
   min-height: 75px;
   background-color: #eee;
 }
@@ -32,4 +31,18 @@ body {
 	height: 25px;
 	float: left;
 	padding-right: 10px; 
+}
+
+.navbar .search-button {
+	height: 34px;
+}
+
+.pagination {
+	padding: 10px;
+	margin-top: 10px;
+}
+
+.pagination a {
+	color: #ccc;
+	font-size: 200%;
 }
